...
                    <navigationItem key="navigationItem" id="P5U-K6-zeC">
                        <nil key="title"/>
                        <segmentedControl key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" id="1Ap-oH-H8E">
                            <rect key="frame" x="113" y="7" width="150" height="30"/>
                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                            <segments>
                                <segment title="List"/>
                                <segment title="Map"/>
                            </segments>
                            <color key="tintColor" red="1" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
                            <connections>
                                <action selector="segmentedControlUpdatedWithSender:" destination="1kK-LE-d8i" eventType="valueChanged" id="m0r-K5-cLI"/>
                            </connections>
                        </segmentedControl>
...
                                <rect key="frame" x="0.0" y="623" width="375" height="44"/>
                                <items>
                                    <barButtonItem style="plain" id="C2N-KZ-aEw">
                                        <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Wr0-di-I7V">
                                            <rect key="frame" x="16" y="7" width="104" height="30"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                            <state key="normal" title="Report a Crime">
                                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                            </state>
                                            <connections>
                                                <action selector="reportCrime:" destination="BYZ-38-t0r" eventType="touchUpInside" id="JQZ-Bp-HPy"/>
                                            </connections>
                                        </button>
...
                                            <subviews>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="89Z-0B-i8Q">
                                                    <rect key="frame" x="153.5" y="31" width="68" height="32"/>
                                                    <color key="backgroundColor" red="1" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
                                                    <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                    <inset key="contentEdgeInsets" minX="5" minY="5" maxX="5" maxY="5"/>
                                                    <state key="normal" title="Submit"/>
                                                    <connections>
                                                        <action selector="submit:" destination="BRO-Hy-Gaa" eventType="touchUpInside" id="L2X-80-QMw"/>
                                                    </connections>
                                                </button>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Uploading data please wait" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M9G-rs-Wt8">
                                                    <rect key="frame" x="110.5" y="70" width="153" height="14.5"/>
...
